# edge_core

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: CONFIG.md  DEPLOY_ORIN.md  DETECTIONS.md  EDGE_SUBMODULE_GUIDE.md  ENV.md  EXTENDING.md  OPERATIONS.md  SCHEDULED_INFERENCE.md  TESTING.md
env/: README.md
scripts/: run_all.sh
src/edge/: camera_registry.py  config.py  main.py  messaging.py  schema.py
src/edge/api/: mode_server.py
src/edge/pipeline/: __init__.py  pipeline.py
src/edge/pipeline/tasks/: __init__.py  _runtime.py
src/edge/pipeline/tasks/inference/: __init__.py  device.py  engine.py  model.py  scheduled.py  task.py
src/edge/pipeline/tasks/inference/models/: __init__.py  base.py  config.py  detection.py  pose.py  yaml_mock.py  yolo.py
src/edge/pipeline/tasks/inference/models/utils/: __init__.py  geometry.py  image.py
src/edge/pipeline/tasks/inference/scheduled_engine/: __init__.py  activity.py  cache.py  engine.py  loader.py  models.py  policy.py
src/edge/pipeline/tasks/ingestion/: __init__.py  base.py  engine.py  file.py  health.py  rtsp.py  task.py
src/edge/pipeline/tasks/ingestion/engines/: __init__.py  base.py  camera.py  file.py  rtsp.py
src/edge/pipeline/tasks/publish/: __init__.py  engine.py  task.py
src/edge/pipeline/tasks/streaming/: __init__.py  engine.py  ffmpeg.py  task.py  types.py  worker.py
src/edge/pipeline/tasks/streaming/engines/: __init__.py  base.py  default.py  policy.py  shm.py
src/edge/runtime/: __init__.py  duration_meter.py  health_contract.py  health_runtime.py  messaging_runtime.py  pipeline_summary.py  rate_meter.py  shutdown_summary.py  stage_logging.py  task_health.py
trackers/: custom_tracker.yaml
