[project]
name = "edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lap>=0.4",
    "numpy>=1.26,<2",
    "paho-mqtt>=1.6.1",
    "smart-workflow @ git+https://github.com/allenshie/smart-workflow.git@346a65f87394d0fe39b8761734447940b901ab62",
    "smart-messaging-core==0.1.1",
]

[project.optional-dependencies]
vision = [
    "ultralytics==8.3.236",
    "opencv-python-headless>=4.10",
]

[project.scripts]
edge-service = "edge.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
